# perception

./: .gitignore  README.md  README_PERCEPTION_API.md  pyproject.toml  test_pipeline.py
docs/: README_PERCEPTION_API.md
perception_engine/: __init__.py  config_loader.py  data_types.py  inference_v5.py  run_experiment.py
perception_engine/api/: __init__.py  _seg_head.py  pipeline.py  server.py
perception_engine/configs/: __init__.py  experiment.yaml
perception_engine/core/: __init__.py
perception_engine/engine/: __init__.py  inference_engine.py  mask_remapping.py  postprocessing.py  preprocessing.py
perception_engine/evaluation/: __init__.py  batch_runner.py  benchmarking.py  calibration.py  explanation.py  export.py  multiscale_robustness.py  robustness.py  segmentation_metrics.py
perception_engine/models/: __init__.py  base_model.py  config.yaml  loaders.py  registry.py
perception_engine/navigation/: __init__.py  cost_mapping.py  planner.py  safety.py
perception_engine/tests/: __init__.py  run_test_report.py  test_batch_runner.py  test_config_loader.py  test_cost_mapping.py  test_data_types.py  test_end_to_end.py  test_explanation.py  test_export.py  test_integration.py  test_mask_remapping.py  test_planner.py  test_robustness.py  test_safety.py  test_segmentation_metrics.py
perception_engine/training/: build_joint_histograms.py  color_histogram_classifier.py  eval_batch.py  finetune_v6_test.py  infer_dinov2.py  infer_ensemble.py  inference_v5.py  train_dinov2_kaggle.py  (+4 more)
scripts/: run_perception_api.sh  test_pipeline.py
ui/: package-lock.json
(+32 files in other folders)
